// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Namespaces babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.ns2 = _exports.ns1 = void 0;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd
  function foo() {}

  function bar() {}

  const helpers = /*#__PURE__*/Object.freeze({
    __proto__: null,
    foo,
    bar
  });
  _exports.ns2 = _exports.ns1 = helpers;
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.ns2 = _exports.ns1 = void 0;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd
  function foo() {}

  function bar() {}

  const helpers = /*#__PURE__*/Object.freeze({
    __proto__: null,
    foo,
    bar
  });
  _exports.ns2 = _exports.ns1 = helpers;
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}

function bar() {}

var helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo: foo,
  bar: bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

var helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo: foo,
  bar: bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.ns2 = _exports.ns1 = void 0;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  function foo() {}

  function bar() {}

  var helpers = /*#__PURE__*/Object.freeze({
    __proto__: null,
    foo: foo,
    bar: bar
  });
  _exports.ns2 = _exports.ns1 = helpers;
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.ns2 = _exports.ns1 = void 0;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd
  function foo() {}

  function bar() {}

  const helpers = /*#__PURE__*/Object.freeze({
    __proto__: null,
    foo,
    bar
  });
  _exports.ns2 = _exports.ns1 = helpers;
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze({
  __proto__: null,
  foo,
  bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Namespaces babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}

function bar() {}

const helpers = /*#__PURE__*/Object.freeze( /*#__PURE__*/Object.defineProperty({
  __proto__: null,
  foo,
  bar
}, Symbol.toStringTag, {
  value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        ns1: ()=>helpers,
        ns2: ()=>helpers
    });
    function foo() {}
    function bar() {}
    const helpers = /*#__PURE__*/ Object.freeze({
        __proto__: null,
        foo,
        bar
    });
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        ns1: ()=>helpers,
        ns2: ()=>helpers
    });
    function foo() {}
    function bar() {}
    const helpers = /*#__PURE__*/ Object.freeze({
        __proto__: null,
        foo,
        bar
    });
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}
function bar() {}
var helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo: foo,
    bar: bar
}, Symbol.toStringTag, {
    value: "Module"
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
function foo() {}
function bar() {}
var helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo: foo,
    bar: bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        ns1: function() {
            return helpers;
        },
        ns2: function() {
            return helpers;
        }
    });
    function foo() {}
    function bar() {}
    var helpers = /*#__PURE__*/ Object.freeze({
        __proto__: null,
        foo: foo,
        bar: bar
    });
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        ns1: ()=>helpers,
        ns2: ()=>helpers
    });
    function foo() {}
    function bar() {}
    const helpers = /*#__PURE__*/ Object.freeze({
        __proto__: null,
        foo,
        bar
    });
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: "Module"
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { ns1, ns2 } = data;",
]
`;

exports[`Namespaces swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze({
    __proto__: null,
    foo,
    bar
});
exports.ns1 = helpers;
exports.ns2 = helpers;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Namespaces swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}
function bar() {}
const helpers = /*#__PURE__*/ Object.freeze(/*#__PURE__*/ Object.defineProperty({
    __proto__: null,
    foo,
    bar
}, Symbol.toStringTag, {
    value: 'Module'
}));
export { helpers as ns1, helpers as ns2 };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
